2006-08-03  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/dbi.py (_driverConfig): adding "sqlite3" as alias for
	sqlite2 driver.

	* tests/test_base.py (test_project10, test_as2): new tests.

	* src/pydo/base.py (PyDO.project): refactored to permit fields to
	be specified as dicts (e.g., dict(name='foo', asname='nougat')).
	(_metapydo.__init__): strings like "avg(x) as average_x" are now
	parsed. 

2006-08-02  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/test_base.py (test_as1): test for asname.

	* src/pydo/base.py: use new "asname" attribute and
	get_column_expression. 

	* src/pydo/field.py: support for "asname" attribute in Fields, and
	added get_column_expression().

2006-06-08  Jacob Smullyan  <smulloni@smullyan.org>

    * src/pydo/multifetch.py (iterfetch): patch from nine_k for when
    there are no bind variables.
   

2006-06-07  Jacob Smullyan  <smulloni@smullyan.org>

    * tests/test_dbi.py (test_autocommit2.post): catch and ignore
    spurious error in post-test step.

2005-06-05  Tim Golden  <mail@timgolden.me.uk>

    * src/pydo/drivers/sqliteconn2.py: added new driver
    for newer pysqlite2/sqlite3 functionality. Specific
    changes: let pysqlite handle conversions. Slight
    change in the method of fetching last inserted sequence.
    autocommit - not supported directly by pysqlite2;
    instead set isolation_level to None.
	
    * src/pydo/dbi.py: added sqlite2 as driver name
	
    * tests/fixture.py: special-case sqlite2 on cleanup

2006-03-08  Jacob Smullyan  <smulloni@smullyan.org>

    * MANIFEST.in: now including pdfs, thanks to Marien Zwart for
    pointing out the omission.

2006-03-08  Jacob Smullyan  <smulloni@smullyan.org>

    * doc/Makefile (RST2HTML): changing default paths for rst scripts. 

    * src/pydo/__init__.py: upping version to 2.0.

	* CLASSIFIERS: reclassifying as stable.

2006-02-16  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/base.py (PyDO._sequence_for): don't assume that all