@@ -1,3 +1,11 @@
+2007-02-14    <smulloni@smullyan.org>
+
+	* src/pydo/drivers/sqliteconn2.py: fix converter registration for
+	later versions of pysqlite2.
+
+	* tests/test_base.py (test_as1.run): fix test for sqlite2 bind
+	variable style.
+
 2006-08-03  Jacob Smullyan  <smulloni@smullyan.org>
 
 	* src/pydo/dbi.py (_driverConfig): adding "sqlite3" as alias for
